# src/launch/openapi.json
@@ -47,7 +47,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/LaunchRequest"
+                "$ref": "#/components/schemas/InitiateLaunchRequest"
               }
             }
           }
@@ -58,7 +58,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/LaunchResponse"
+                  "$ref": "#/components/schemas/InitiateLaunchResponse"
                 }
               }
             }
@@ -69,7 +69,7 @@
   },
   "components": {
     "schemas": {
-      "LaunchRequest": {
+      "InitiateLaunchRequest": {
         "type": "object",
         "properties": {
           "rocketName": {
@@ -84,7 +84,7 @@
           "destination"
         ]
       },
-      "LaunchResponse": {
+      "InitiateLaunchResponse": {
         "type": "object",
         "properties": {
           "rocketName": {
